--- a/en.html
+++ b/en.html
@@ -447,7 +447,7 @@ input[type=checkbox]:checked::after{
                 <div>
                 
       &nbsp;&nbsp;       &nbsp;&nbsp;    &nbsp;&nbsp;          &nbsp;&nbsp;       &nbsp;&nbsp;    &nbsp;&nbsp;               
-<font style=color:purple;font-size:12px;>Giá: 100K/1 tháng | Telegram: @hao1503</font>
+<font style=color:purple;font-size:12px;>Hảo (NonJb) | Telegram: @hao1503</font>
 
 <div v-show="tabValue==='offset'">
 <br>
