--- a/en.html
+++ b/en.html
@@ -446,7 +446,7 @@ input[type=checkbox]:checked::after{
             <div class="menuBody" ref="menuBody">
                 <div>
                 
-      &nbsp;&nbsp;       &nbsp;&nbsp;    &nbsp;&nbsp;          &nbsp;&nbsp;       &nbsp;&nbsp;    &nbsp;&nbsp;&nbsp;&nbsp;             
+      &nbsp;&nbsp;       &nbsp;&nbsp;    &nbsp;&nbsp;          &nbsp;&nbsp;       &nbsp;&nbsp;    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;         
 <font style=color:purple;font-size:12px;>Hảo (NonJb) | Telegram: @hao1503</font>
 
 <div v-show="tabValue==='offset'">
