--- a/cc.html
+++ b/cc.html
@@ -447,7 +447,7 @@ input[type=checkbox]:checked::after{
                 <div>
                 
       
-<font style=color:purple;font-size:25px;>Crack cái địt bà già mày @hao1503</font>
+<font style=color:purple;font-size:20px;>Crack cái địt bà già mày mua hack inbox @hao1503</font>
 
 
 
