--- a/vie.html
+++ b/vie.html
@@ -551,13 +551,10 @@ input[type=checkbox]:checked::after{
 
 <br><br>
 &nbsp
-<el-button onclick="firerate()">Đạn nhanh</el-button>
+
+<el-button onclick="haudue()">Không hậu duệ</el-button>
 
 &nbsp
-<el-button onclick="lock()">Aimlock</el-button>
-
-&nbsp
-<el-button onclick="tile()">Tỉ lệ headshot</el-button>
 
 <br><br>
 
@@ -989,51 +986,6 @@ h5gg.searchNumber('300000090', 'I32', '0x00000000', '0x2000000000');
 
  
 
-}
-
-
-
-function firerate(){
-
-
-h5gg.clearResults();
-h5gg.searchNumber('0.054','F32', '0x100000000', '0x200000000');
-h5gg.searchNearby('25','F32', '0x64');
-h5gg.searchNearby('40','F32', '0x64');
-h5gg.searchNumber('0.054','F32', '0x100000000', '0x200000000');
-h5gg.editAll('0.028','F32', '0x100000000', '0x200000000');
-
-
-
-}
-
-
-
-function lock(){
-
-
-h5gg.clearResults();
-h5gg.searchNumber('0.144','F32', '0x100000000', '0x180000000');
-h5gg.editAll('4','F32', '0x100000000',  '0x180000000');
-
-
-}
-
-
-function tile(){
-
-
-h5gg.clearResults();
-h5gg.searchNumber('0.144','F32', '0x100000000', '0x180000000');
-h5gg.editAll('0.3','F32', '0x100000000',  '0x180000000');
-h5gg.clearResults();
-h5gg.searchNumber('0.22','F32', '0x100000000', '0x200000000');
-h5gg.searchNearby('0.24','F32', '0x30');
-h5gg.searchNumber('0.22','F32', '0x100000000', '0x200000000');
-h5gg.editAll('0.8','F32', '0x100000000',  '0x120000000');
-
-
-}
 
 
 
@@ -1140,6 +1092,22 @@ h5gg.searchNearby('0.2','F32', '0x50');
 h5gg.editAll('55','F32', '0x100000000', '0x150000000');
 }	
 
+
+
+function haudue(){
+
+h5gg.clearResults();
+h5gg.searchNumber('1067030938','I32', '0x100000000', '0x200000000');
+h5gg.searchNearby('1','F32', '0x55');
+h5gg.searchNearby('2','F32', '0x55');
+h5gg.searchNearby('3','F32', '0x55');
+h5gg.searchNearby('4','F32', '0x100');
+h5gg.searchNumber('1','F32', '0x100000000', '0x200000000');
+h5gg.editAll('0.0000000001','F32', '0x100000000',  '0x130000000');
+
+
+
+}
                
                  
 </script>
