--- a/fake.html
+++ b/fake.html
@@ -8,8 +8,8 @@
 
 #bodyView{
 background-color: rgba(0,0,0,.40);
-height: 100%;
-width: 100%;
+height: 200px;
+width: 350px;
 position: fixed; 
 overflow: hidden;
 table-layout:fixed;
