--- a/vuejs.html
+++ b/vuejs.html
@@ -1,14 +1,11 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<style>
-h1 {
-   text-align: center;
-   font-size: 20px;
-   margin-top: 40px;
-   margin-bottom: 50px;
-   color: red;
-  }
-</style>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
-
-<h1>Phiên bản update mới đã cập nhật vui lòng liên hệ người bán key để lấy IPA mới. +Thêm bypass anticheat v1 | +Fix văng game | +Fix bung dù nhanh</h1>
+<h1></h1>
+<script>
+swal("Phiên bản update mới đã cập nhật vui lòng liên hệ người bán key để lấy IPA mới.                                         +Thêm bypass anticheat v1 | +Fix văng game | +Fix bung dù nhanh", {
+  button: false,
+closeOnClickOutside: false,
+});
+</script>
